1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (GETTEXT): Define also if not using GNU_GETTEXT.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * places.lsp (MACRO-FUNCTION): Ignore `env'.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (strm_keyboard_len): Define as strm_len, not 0.
          (make_keyboard_stream): Don't add strm_len to strm_keyboard_len, it
          is already included.

1999-06-17  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (malloc, free): Remove declarations.
          (malloca, freea): Move declarations.
          (DRIVER_frame_data): Remove type.
        * spvw_alloca.d (malloc, free): New declarations.
        * aridecl.d (HAVE_NUM_STACK, NUM_STACK, NUM_STACK_bound,
           NUM_STACK_normal): Remove declarations.
          (num_stack_need, num_stack_need_1): Remove obsolete code. Add
          `unused' to avoid gcc warnings.
          (NUM_STACK_normal, arith_ueberlauf, compare_NUM_STACK_bound): Remove.
          (SAVE_NUM_STACK, RESTORE_NUM_STACK. num_stack_need,
           num_stack_need_1): New definitions, using malloca/freea.
        * intlog.d (I_I_logior_I, I_I_logxor_I, I_I_logand_I, I_I_logeqv_I,
           I_I_lognand_I, I_I_lognor_I, I_I_logandc2_I, I_I_logorc2_I,
           I_lognot_I): Defer RESTORE_NUM_STACK until done with the temporary
          digit sequence.
          (I_I_ash_I): Do RESTORE_NUM_STACK before error.
        * intplus.d (DS_1_plus, DS_minus1_plus): Do RESTORE_NUM_STACK before
          error.
          (I_1_plus_I, I_minus1_plus_I): Defer RESTORE_NUM_STACK until done
          with the temporary digit sequence.
          (I_I_plus_I, I_minus_I, I_I_minus_I): Likewise. Do RESTORE_NUM_STACK
          before error.
        * intbyte.d (lb_extract): Move SAVE_NUM_STACK and defer
          RESTORE_NUM_STACK until done with the temporary digit sequence.
          (mkf_extract): Likewise.